2006-01-30  Peter Harvey  <peter.a.harvey@gmail.com>

	* data/ui/epiphany-ui.xml
	* src/ephy-lockdown.c
	* src/ephy-toolbar.c
	* src/ephy-window.c
	* lib/egg/egg-editable-toolbar.c
	* lib/egg/egg-editable-toolbar.h
	
	Add a Toolbars submenu with per-toolbar hide/show items.

2006-01-30  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-main.c: (open_urls), (call_dbus_proxy):

	Idle unref the dbus proxy in case we didn't call any remote
	methods; and ref the dbus proxy for each call + one idle unref
	for each URL remoted.

2006-01-30  Crispin Flowerday  <gnome@flowerday.cx>

	* src/bookmarks/ephy-bookmark-properties.c: (update_warning),
	(ephy_bookmark_properties_constructor):

	Use ngettext() for plural string. Fixes bug #329242

2006-01-30  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c:
	
	Change text for zoom in/out.

2006-01-30  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyAboutModule.cpp:

	Special error text for localhost URIs. Bug #323261,
	patch by Jean-François Rameau.

2006-01-30  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GlobalHistory.cpp:

	Truncate URI and title strings. Bug #329160.

2006-01-30  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-find-toolbar.c: (ephy_find_toolbar_dispose),
	(ephy_find_toolbar_class_init):

	Release the finder on dispose not finalize.

2006-01-30  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmark-properties.c
	
	Add "Show" text to the items in the "Similar" menu.

2006-01-29  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-gui.c: (ephy_gui_get_current_event):
	* lib/ephy-gui.h:

	Add a convenience function to get current event data.

	* src/ephy-link.c: (ephy_link_open),
	(ephy_link_flags_from_current_event):
	* src/ephy-link.h:

	Add a convenience function to translate the current event
	into EphyLinkFlags.

	* src/ephy-go-action.c: (ephy_go_action_get_type):
	* src/ephy-go-action.h:

	Make this an EphyLinkAction.
