@@ -1,3 +1,10 @@
+2006-01-30  Christian Persch  <chpe@cvs.gnome.org>
+
+	* lib/egg/egg-editable-toolbar.c:
+	(egg_editable_toolbar_set_ui_manager):
+
+	Fix the build with -Werror.
+
 2006-01-30  Peter Harvey  <peter.a.harvey@gmail.com>
 
 	* data/ui/epiphany-ui.xml
